--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>表示確認</title>
+  <title>狂気の公園診断</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<h1>表示テスト</h1>
-<p>ここが表示されればGitHub Pagesは正常です。</p>
+<div class="card">
+  <h1>狂気の公園診断</h1>
+
+  <p class="lead">
+    あなたの深層心理に潜む<br>
+    “最も相性の良い公園”を診断します。
+  </p>
+
+  <button onclick="location.href='question.html'">
+    診断をはじめる
+  </button>
+</div>
 
 </body>
 </html>
