--- a/question.html
+++ b/question.html
@@ -1,21 +1,21 @@
-const questions = [
-  { text: "初対面の人と話すと公園について話すと元気になる", a: "E", b: "I" },
-  { text: "人と会った後は一人で公園にいる時間が必要だと感じる", a: "I", b: "E" },
-  { text: "大勢で行動するより少人数が落ち着く", a: "I", b: "E" },
-  { text: "イベントや集まりに参加するのが好きだ", a: "E", b: "I" },
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>診断中</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
-  { text: "現実的で具体的な公園を重視する", a: "S", b: "N" },
-  { text: "ひらめきやアイデアを公園で考えるのが好きだ", a: "N", b: "S" },
-  { text: "経験や実績をもとに判断する", a: "S", b: "N" },
-  { text: "将来の可能性を想像するのが楽しい", a: "N", b: "S" },
+<div class="card">
+  <h2 id="count">Q1 / 16</h2>
+  <p id="text"></p>
 
-  { text: "判断では論理性や公平さを重視する", a: "T", b: "F" },
-  { text: "人の気持ちを考えて判断することが多い", a: "F", b: "T" },
-  { text: "正しさよりも思いやりを大切にしたい", a: "F", b: "T" },
-  { text: "感情より事実を優先すべきだと思う", a: "T", b: "F" },
+  <button onclick="answer('a')">はい</button>
+  <button onclick="answer('b')">いいえ</button>
+</div>
 
-  { text: "計画を立てて物事を進めたい", a: "J", b: "P" },
-  { text: "予定が決まっていない方が気が楽だ", a: "P", b: "J" },
-  { text: "締切は早めに決めて動きたい", a: "J", b: "P" },
-  { text: "状況に応じて柔軟に対応したい", a: "P", b: "J" }
-];
+<script src="data/questions.js"></script>
+<script src="js/questions.js"></script>
+</body>
+</html>
