--- a/question.html
+++ b/question.html
@@ -9,14 +9,13 @@
 
 <div class="card">
   <h2 id="count">Q1 / 16</h2>
-  <p id="text"></p>
+  <p id="question"></p>
 
-  <button onclick="answer('a')">はい</button>
-  <button onclick="answer('b')">いいえ</button>
+  <button onclick="answer()">はい</button>
 </div>
 
 <script src="data/questions.js"></script>
-<script src="js/questions.js"></script>
+<script src="js/question.js"></script>
 
 </body>
 </html>
