--- a/result.html
+++ b/result.html
@@ -9,7 +9,14 @@
 
 <div class="card">
   <h1>診断結果</h1>
+
   <h2 id="type"></h2>
+  <p id="park"></p>
+
+  <div class="bar">
+    <div id="bar-inner"></div>
+  </div>
+
   <p id="notice"></p>
 </div>
 
