--- a/question.html
+++ b/question.html
@@ -2,16 +2,22 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>診断中</title>
+  <title>診断中｜狂気の公園診断</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <div class="card">
   <h2 id="count">Q1 / 16</h2>
-  <p id="question"></p>
 
-  <button onclick="answer()">はい</button>
+  <p id="question">
+    質問が表示されます
+  </p>
+
+  <div style="margin-top: 24px;">
+    <button onclick="answer('yes')">はい</button>
+    <button onclick="answer('no')">いいえ</button>
+  </div>
 </div>
 
 <script src="data/questions.js"></script>
