--- a/result.html
+++ b/result.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>診断結果</title>
+  <title>診断結果｜狂気の公園診断</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,13 +11,19 @@
   <h1>診断結果</h1>
 
   <h2 id="type"></h2>
-  <p id="park"></p>
+  <h3 id="park"></h3>
+
+  <p id="description"></p>
 
   <div class="bar">
     <div id="bar-inner"></div>
   </div>
 
   <p id="notice"></p>
+
+  <button onclick="location.href='index.html'">
+    もう一度診断する
+  </button>
 </div>
 
 <script src="js/result.js"></script>
