--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>狂気の公園診断</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <div class="card">
   <h1>狂気の公園診断</h1>
-
-  <p class="lead">
-    あなたの深層心理に潜む<br>
-    “最も相性の良い公園”を診断します。
+  <p>
+    あなたが惹かれる「公園」は、<br>
+    すでにあなたの内面を知っています。
   </p>
 
   <button onclick="location.href='question.html'">
