--- a/result.html
+++ b/result.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>診断結果｜狂気の公園診断</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,7 +12,6 @@
   <h1>診断結果</h1>
 
   <h2 id="type"></h2>
-  <h3 id="park"></h3>
 
   <p id="description"></p>
 
@@ -21,9 +21,8 @@
 
   <p id="notice"></p>
 
-  <button onclick="location.href='index.html'">
-    もう一度診断する
-  </button>
+  <button onclick="shareResult()">結果をシェア</button>
+  <button onclick="location.href='index.html'">もう一度診断する</button>
 </div>
 
 <script src="js/result.js"></script>
